feat: css 코드 작성

--- a/week1/index.html
+++ b/week1/index.html
@@ -17,23 +17,19 @@
     <title>햄식이를 도와줘</title>
   </head>
   <body>
-    <header class="header"><h1>🍔 햄식이를 도와줘 🍔</h1></header>
+    <header class="header"><h1 class="header__title">🍔 햄식이를 도와주세요 🍔</h1></header>
     <main class="main">
       <aside class="sidebar">
-        <h2 class="sidebar__title">다른 거 먹자</h2>
+        <h2 class="sidebar__title">다른 거 먹자~</h2>
         <ul class="sidebar__options">
-          <li class="sidebar__options-li"><button>맥도날드</button></li>
+          <li class="sidebar__options-li"><button class="active">맥도날드</button></li>
           <li class="sidebar__options-li"><button>버거킹</button></li>
         </ul>
       </aside>
       <section class="menu">
         <h2 class="menu__title">햄버거 메뉴 리스트</h2>
         <article class="menu__box">
-          <img
-            src="https://w.namu.la/s/126ed0de470ffd19954dde2dcdf4684286c506b774a2c1cf713c04309cf94ce26946aa03ec30a4a8a93e8e645c7bf361347807b0654a312c6e58c34e8f6bbf9825abf24df3fdd61d1b9a12986b95f3bd001989fed996debfbe1dcf12a9bb7226"
-            alt="햄버거"
-            class="menu__box__img"
-          />
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
             <strong class="menu__box__text-title">빅맥</strong>
             <p class="menu__box__text-price">5500원</p>
@@ -41,47 +37,38 @@
           </div>
         </article>
         <article class="menu__box">
-          <img
-            src="https://w.namu.la/s/126ed0de470ffd19954dde2dcdf4684286c506b774a2c1cf713c04309cf94ce26946aa03ec30a4a8a93e8e645c7bf361347807b0654a312c6e58c34e8f6bbf9825abf24df3fdd61d1b9a12986b95f3bd001989fed996debfbe1dcf12a9bb7226"
-            alt="햄버거"
-            class="menu__box__img"
-          />
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
             <strong class="menu__box__text-title">슈슈버거</strong>
             <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">일단 내 최애는 아님</p>
+            <p class="menu__box__text-description">이것도 내 최애는 아님</p>
           </div>
         </article>
         <article class="menu__box">
-          <img
-            src="https://w.namu.la/s/126ed0de470ffd19954dde2dcdf4684286c506b774a2c1cf713c04309cf94ce26946aa03ec30a4a8a93e8e645c7bf361347807b0654a312c6e58c34e8f6bbf9825abf24df3fdd61d1b9a12986b95f3bd001989fed996debfbe1dcf12a9bb7226"
-            alt="햄버거"
-            class="menu__box__img"
-          />
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
             <strong class="menu__box__text-title">베토디</strong>
             <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">일단 내 최애는 아님</p>
+            <p class="menu__box__text-description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
           </div>
         </article>
         <article class="menu__box">
-          <img
-            src="https://w.namu.la/s/126ed0de470ffd19954dde2dcdf4684286c506b774a2c1cf713c04309cf94ce26946aa03ec30a4a8a93e8e645c7bf361347807b0654a312c6e58c34e8f6bbf9825abf24df3fdd61d1b9a12986b95f3bd001989fed996debfbe1dcf12a9bb7226"
-            alt="햄버거"
-            class="menu__box__img"
-          />
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
             <strong class="menu__box__text-title">상하이</strong>
             <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">내!!! 최애!!! 얼마나 맛있게요?</p>
+            <p class="menu__box__text-description">
+              내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
+              KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
+              처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살 패티를
+              쓰고있는데 품질이 이전에 비하면 나빠졌다. 그래도 여전히 잘 팔리는 맥도날드의 대표적인
+              메뉴이다. 이후 맥스파이시로 개명하면서 패티가 반 정도로 얇아졌다. 경쟁제품 중에 제일
+              얇은 편이다.
+            </p>
           </div>
         </article>
         <article class="menu__box">
-          <img
-            src="https://w.namu.la/s/126ed0de470ffd19954dde2dcdf4684286c506b774a2c1cf713c04309cf94ce26946aa03ec30a4a8a93e8e645c7bf361347807b0654a312c6e58c34e8f6bbf9825abf24df3fdd61d1b9a12986b95f3bd001989fed996debfbe1dcf12a9bb7226"
-            alt="햄버거"
-            class="menu__box__img"
-          />
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
             <strong class="menu__box__text-title">1955</strong>
             <p class="menu__box__text-price">5500원</p>
@@ -89,11 +76,62 @@
           </div>
         </article>
         <article class="menu__box">
-          <img
-            src="https://w.namu.la/s/126ed0de470ffd19954dde2dcdf4684286c506b774a2c1cf713c04309cf94ce26946aa03ec30a4a8a93e8e645c7bf361347807b0654a312c6e58c34e8f6bbf9825abf24df3fdd61d1b9a12986b95f3bd001989fed996debfbe1dcf12a9bb7226"
-            alt="햄버거"
-            class="menu__box__img"
-          />
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+          <div class="menu__box__text">
+            <strong class="menu__box__text-title">불고기</strong>
+            <p class="menu__box__text-price">5500원</p>
+            <p class="menu__box__text-description">스탠다드긴 해~</p>
+          </div>
+        </article>
+        <article class="menu__box">
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+          <div class="menu__box__text">
+            <strong class="menu__box__text-title">빅맥</strong>
+            <p class="menu__box__text-price">5500원</p>
+            <p class="menu__box__text-description">일단 내 최애는 아님</p>
+          </div>
+        </article>
+        <article class="menu__box">
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+          <div class="menu__box__text">
+            <strong class="menu__box__text-title">슈슈버거</strong>
+            <p class="menu__box__text-price">5500원</p>
+            <p class="menu__box__text-description">이것도 내 최애는 아님</p>
+          </div>
+        </article>
+        <article class="menu__box">
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+          <div class="menu__box__text">
+            <strong class="menu__box__text-title">베토디</strong>
+            <p class="menu__box__text-price">5500원</p>
+            <p class="menu__box__text-description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
+          </div>
+        </article>
+        <article class="menu__box">
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+          <div class="menu__box__text">
+            <strong class="menu__box__text-title">상하이</strong>
+            <p class="menu__box__text-price">5500원</p>
+            <p class="menu__box__text-description">
+              내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
+              KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
+              처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살 패티를
+              쓰고있는데 품질이 이전에 비하면 나빠졌다. 그래도 여전히 잘 팔리는 맥도날드의 대표적인
+              메뉴이다. 이후 맥스파이시로 개명하면서 패티가 반 정도로 얇아졌다. 경쟁제품 중에 제일
+              얇은 편이다.
+            </p>
+          </div>
+        </article>
+        <article class="menu__box">
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+          <div class="menu__box__text">
+            <strong class="menu__box__text-title">1955</strong>
+            <p class="menu__box__text-price">5500원</p>
+            <p class="menu__box__text-description">이건 몰까...</p>
+          </div>
+        </article>
+        <article class="menu__box">
+          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
             <strong class="menu__box__text-title">불고기</strong>
             <p class="menu__box__text-price">5500원</p>
