feat: faviticon 변경

--- a/week1/index.html
+++ b/week1/index.html
@@ -11,7 +11,7 @@
       content="햄식이를 위한 햄버거 메뉴 페이지입니다. 궁금하시면 클릭 ㄱㄱ"
     />
     <meta property="og:image" content="https://img.hankyung.com/photo/202112/01.28426992.1.jpg" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/assets/hamburger.png" />
     <link rel="stylesheet" href="/src/reset.css" />
     <link rel="stylesheet" href="/src/style.css" />
     <title>햄식이를 도와줘</title>
