style: 스타일 수정

--- a/week1/index.html
+++ b/week1/index.html
@@ -20,7 +20,7 @@
     <header class="header"><h1 class="header__title">🍔 햄식이를 도와주세요 🍔</h1></header>
     <main class="main">
       <aside class="sidebar">
-        <h2 class="sidebar__title">다른 거 먹자~</h2>
+        <h2 class="sidebar__title">다른 거 먹자</h2>
         <ul class="sidebar__options">
           <li class="sidebar__options-li"><button class="active">맥도날드</button></li>
           <li class="sidebar__options-li"><button>버거킹</button></li>
