fix: article 내부 테그 수정

--- a/week1/index.html
+++ b/week1/index.html
@@ -31,7 +31,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">빅맥</strong>
+            <h3 class="menu__box__text-title">빅맥</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">일단 내 최애는 아님</p>
           </div>
@@ -39,7 +39,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">슈슈버거</strong>
+            <h3 class="menu__box__text-title">슈슈버거</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">이것도 내 최애는 아님</p>
           </div>
@@ -47,7 +47,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">베토디</strong>
+            <h3 class="menu__box__text-title">베토디</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
           </div>
@@ -55,7 +55,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">상하이</strong>
+            <h3 class="menu__box__text-title">상하이</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">
               내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
@@ -70,7 +70,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">1955</strong>
+            <h3 class="menu__box__text-title">1955</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">이건 몰까...</p>
           </div>
@@ -78,7 +78,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">불고기</strong>
+            <h3 class="menu__box__text-title">불고기</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">스탠다드긴 해~</p>
           </div>
@@ -86,7 +86,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">빅맥</strong>
+            <h3 class="menu__box__text-title">빅맥</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">일단 내 최애는 아님</p>
           </div>
@@ -94,7 +94,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">슈슈버거</strong>
+            <h3 class="menu__box__text-title">슈슈버거</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">이것도 내 최애는 아님</p>
           </div>
@@ -102,7 +102,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">베토디</strong>
+            <h3 class="menu__box__text-title">베토디</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
           </div>
@@ -110,7 +110,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">상하이</strong>
+            <h3 class="menu__box__text-title">상하이</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">
               내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
@@ -125,7 +125,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">1955</strong>
+            <h3 class="menu__box__text-title">1955</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">이건 몰까...</p>
           </div>
@@ -133,7 +133,7 @@
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
           <div class="menu__box__text">
-            <strong class="menu__box__text-title">불고기</strong>
+            <h3 class="menu__box__text-title">불고기</h3>
             <p class="menu__box__text-price">5500원</p>
             <p class="menu__box__text-description">스탠다드긴 해~</p>
           </div>
