fix: BEM기반 클래스네임 수정

--- a/week1/index.html
+++ b/week1/index.html
@@ -21,43 +21,43 @@
     <main class="main">
       <aside class="sidebar">
         <h2 class="sidebar__title">다른 거 먹자</h2>
-        <ul class="sidebar__options">
-          <li class="sidebar__options-li"><button class="active">맥도날드</button></li>
-          <li class="sidebar__options-li"><button>버거킹</button></li>
+        <ul class="sidebar__options-wrapper">
+          <li class="sidebar__options"><button class="active">맥도날드</button></li>
+          <li class="sidebar__options"><button>버거킹</button></li>
         </ul>
       </aside>
       <section class="menu">
         <h2 class="menu__title">햄버거 메뉴 리스트</h2>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">빅맥</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">일단 내 최애는 아님</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">빅맥</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">일단 내 최애는 아님</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">슈슈버거</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">이것도 내 최애는 아님</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">슈슈버거</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">이것도 내 최애는 아님</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">베토디</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">베토디</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">상하이</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">상하이</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">
               내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
               KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
               처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살 패티를
@@ -69,50 +69,50 @@
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">1955</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">이건 몰까...</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">1955</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">이건 몰까...</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">불고기</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">스탠다드긴 해~</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">불고기</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">스탠다드긴 해~</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">빅맥</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">일단 내 최애는 아님</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">빅맥</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">일단 내 최애는 아님</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">슈슈버거</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">이것도 내 최애는 아님</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">슈슈버거</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">이것도 내 최애는 아님</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">베토디</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">베토디</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">상하이</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">상하이</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">
               내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
               KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
               처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살 패티를
@@ -124,30 +124,30 @@
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">1955</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">이건 몰까...</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">1955</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">이건 몰까...</p>
           </div>
         </article>
         <article class="menu__box">
           <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text">
-            <h3 class="menu__box__text-title">불고기</h3>
-            <p class="menu__box__text-price">5500원</p>
-            <p class="menu__box__text-description">스탠다드긴 해~</p>
+          <div class="menu__box__text-wrapper">
+            <h3 class="menu__box__title">불고기</h3>
+            <p class="menu__box__price">5500원</p>
+            <p class="menu__box__description">스탠다드긴 해~</p>
           </div>
         </article>
       </section>
       <section class="cart">
         <h2 class="cart__title">장바구니</h2>
         <div class="cart__price">
-          <p class="cart__price-title">누적 금액</p>
-          <p class="cart__price-content">0원</p>
+          <p class="cart__price--title">누적 금액</p>
+          <p class="cart__price--content">0원</p>
         </div>
         <div class="cart__footer">
-          <button class="cart__footer-button">주문하기</button>
-          <button class="cart__footer-button">취소하기</button>
+          <button class="cart__footer--button">주문하기</button>
+          <button class="cart__footer--button">취소하기</button>
         </div>
       </section>
     </main>
