--- a/week1/index.html
+++ b/week1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,116 +28,118 @@
       </aside>
       <section class="menu">
         <h2 class="menu__title">햄버거 메뉴 리스트</h2>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">빅맥</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">일단 내 최애는 아님</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">슈슈버거</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">이것도 내 최애는 아님</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">베토디</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">상하이</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">
-              내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
-              KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
-              처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살 패티를
-              쓰고있는데 품질이 이전에 비하면 나빠졌다. 그래도 여전히 잘 팔리는 맥도날드의 대표적인
-              메뉴이다. 이후 맥스파이시로 개명하면서 패티가 반 정도로 얇아졌다. 경쟁제품 중에 제일
-              얇은 편이다.
-            </p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">1955</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">이건 몰까...</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">불고기</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">스탠다드긴 해~</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">빅맥</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">일단 내 최애는 아님</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">슈슈버거</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">이것도 내 최애는 아님</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">베토디</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">상하이</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">
-              내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
-              KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
-              처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살 패티를
-              쓰고있는데 품질이 이전에 비하면 나빠졌다. 그래도 여전히 잘 팔리는 맥도날드의 대표적인
-              메뉴이다. 이후 맥스파이시로 개명하면서 패티가 반 정도로 얇아졌다. 경쟁제품 중에 제일
-              얇은 편이다.
-            </p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">1955</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">이건 몰까...</p>
-          </div>
-        </article>
-        <article class="menu__box">
-          <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
-          <div class="menu__box__text-wrapper">
-            <h3 class="menu__box__title">불고기</h3>
-            <p class="menu__box__price">5500원</p>
-            <p class="menu__box__description">스탠다드긴 해~</p>
-          </div>
-        </article>
+        <ul class="menu__list">
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">빅맥</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">일단 내 최애는 아님</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">슈슈버거</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">이것도 내 최애는 아님</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">베토디</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">상하이</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">
+                내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
+                KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
+                처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살
+                패티를 쓰고있는데 품질이 이전에 비하면 나빠졌다. 그래도 여전히 잘 팔리는 맥도날드의
+                대표적인 메뉴이다. 이후 맥스파이시로 개명하면서 패티가 반 정도로 얇아졌다. 경쟁제품
+                중에 제일 얇은 편이다.
+              </p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">1955</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">이건 몰까...</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">불고기</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">스탠다드긴 해~</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">빅맥</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">일단 내 최애는 아님</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">슈슈버거</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">이것도 내 최애는 아님</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">베토디</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">흠냐 얘도 내 최애는 아님 ㅠㅠ</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">상하이</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">
+                내!!! 최애!!! 얼마나 맛있게요? 처음에는 두꺼운 닭다리살을 써서 엄청난 인기를 끌었다.
+                KFC에서는 대개 분쇄 닭고기 패티 아니면 닭가슴살 패티인데 반해 닭다리살은 맥도날드가
+                처음 시도한 것이나 마찬가지였기 때문이다. 그러나 2006년부터는 KFC처럼 닭가슴살
+                패티를 쓰고있는데 품질이 이전에 비하면 나빠졌다. 그래도 여전히 잘 팔리는 맥도날드의
+                대표적인 메뉴이다. 이후 맥스파이시로 개명하면서 패티가 반 정도로 얇아졌다. 경쟁제품
+                중에 제일 얇은 편이다.
+              </p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">1955</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">이건 몰까...</p>
+            </div>
+          </li>
+          <li class="menu__box">
+            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <div class="menu__box__text-wrapper">
+              <strong class="menu__box__title">불고기</strong>
+              <p class="menu__box__price">5500원</p>
+              <p class="menu__box__description">스탠다드긴 해~</p>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="cart">
         <h2 class="cart__title">장바구니</h2>
