--- a/week1/index.html
+++ b/week1/index.html
@@ -11,13 +11,19 @@
       content="햄식이를 위한 햄버거 메뉴 페이지입니다. 궁금하시면 클릭 ㄱㄱ"
     />
     <meta property="og:image" content="https://img.hankyung.com/photo/202112/01.28426992.1.jpg" />
-    <link rel="icon" type="image/svg+xml" href="/public/assets/hamburger.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/hamburger.png" />
     <link rel="stylesheet" href="/src/reset.css" />
     <link rel="stylesheet" href="/src/style.css" />
     <title>햄식이를 도와줘</title>
   </head>
   <body>
-    <header class="header"><h1 class="header__title">🍔 햄식이를 도와주세요 🍔</h1></header>
+    <header class="header"></header>
+    <main class="main">
+      <aside class="sidebar"></aside>
+      <section class="menu"></section>
+      <section class="cart"></section>
+    </main>
+    <!-- <header class="header"><h1 class="header__title">🍔 햄식이를 도와주세요 🍔</h1></header>
     <main class="main">
       <aside class="sidebar">
         <h2 class="sidebar__title">다른 거 먹자</h2>
@@ -30,7 +36,7 @@
         <h2 class="menu__title">햄버거 메뉴 리스트</h2>
         <ul class="menu__list">
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">빅맥</strong>
               <p class="menu__box__price">5500원</p>
@@ -38,7 +44,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">슈슈버거</strong>
               <p class="menu__box__price">5500원</p>
@@ -46,7 +52,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">베토디</strong>
               <p class="menu__box__price">5500원</p>
@@ -54,7 +60,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">상하이</strong>
               <p class="menu__box__price">5500원</p>
@@ -69,7 +75,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">1955</strong>
               <p class="menu__box__price">5500원</p>
@@ -77,7 +83,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">불고기</strong>
               <p class="menu__box__price">5500원</p>
@@ -85,7 +91,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">빅맥</strong>
               <p class="menu__box__price">5500원</p>
@@ -93,7 +99,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">슈슈버거</strong>
               <p class="menu__box__price">5500원</p>
@@ -101,7 +107,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">베토디</strong>
               <p class="menu__box__price">5500원</p>
@@ -109,7 +115,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">상하이</strong>
               <p class="menu__box__price">5500원</p>
@@ -124,7 +130,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">1955</strong>
               <p class="menu__box__price">5500원</p>
@@ -132,7 +138,7 @@
             </div>
           </li>
           <li class="menu__box">
-            <img src="/public/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
+            <img src="/assets/hamburger.png" alt="햄버거" class="menu__box__img" />
             <div class="menu__box__text-wrapper">
               <strong class="menu__box__title">불고기</strong>
               <p class="menu__box__price">5500원</p>
@@ -152,6 +158,7 @@
           <button class="cart__footer--button">취소하기</button>
         </div>
       </section>
-    </main>
+    </main> -->
+    <script src="./src/app.js" type="module"></script>
   </body>
 </html>
